# HotWordsLex

./: .gitignore  hotwords.txt  pyproject.toml
.github/workflows/: collect.yml
docs/: mirror-acceleration.md
output/: hotwords_latest.json  hotwords_latest.txt  hotwords_latest_endpoints.json
src/hotwords_lex/: __init__.py  __main__.py  changelog.py  config.py  deduplicator.py  extractor.py  filter.py  hotword_store.py  key_pool.py  main.py
src/hotwords_lex/sources/: __init__.py  arxiv.py  baidu.py  base.py  bilibili.py  devto.py  douyin.py  github.py  hackernews.py  huggingface.py  ithome.py  polymarket.py  reddit.py  toutiao.py  weibo.py  x_twitter.py
